@@ -1,0 +1,43 @@
+<?php
+
+// Include the API
+require '../../lastfmapi/lastfmapi.php';
+
+// Get the session auth data
+$file = fopen('../auth.txt', 'r');
+// Put the auth data into an array
+$authVars = array(
+	'apiKey' => trim(fgets($file)),
+	'secret' => trim(fgets($file)),
+	'username' => trim(fgets($file)),
+	'sessionKey' => trim(fgets($file)),
+	'subscriber' => trim(fgets($file))
+);
+$config = array(
+	'enabled' => true,
+	'path' => '../../lastfmapi/',
+	'cache_length' => 1800
+);
+// Pass the array to the auth class to eturn a valid auth
+$auth = new lastfmApiAuth('setsession', $authVars);
+
+// Call for the album package class with auth data
+$apiClass = new lastfmApi();
+$radioClass = $apiClass->getPackage($auth, 'radio', $config);
+
+// Setup the variables
+$methodVars = array(
+	'station' => 'lastfm://user/last.hq/personal'
+);
+
+if ( $radio = $radioClass->tune($methodVars) ) {
+	echo '<b>Data Returned</b>';
+	echo '<pre>';
+	print_r($radio);
+	echo '</pre>';
+}
+else {
+	die('<b>Error '.$eventClass->error['code'].' - </b><i>'.$eventClass->error['desc'].'</i>');
+}
+
+?>
